<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/menu_add"/>
    <item android:id="@+id/menu_choose_all"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:visible="false"
          android:title="@string/menu_choose_all"/>
    <item android:id="@+id/menu_choose"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:title="@string/menu_choose_atms"/>
    <item android:id="@+id/menu_del_choose"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:visible="false"
          android:icon="@android:drawable/ic_menu_delete"
          android:title="@string/menu_del_chooses"/>
</menu>