<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/main_liner">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_serrial"
                android:hint="@string/edit_serial"
                android:layout_weight="3"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_host"
                android:hint="@string/edit_host"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_address"
                android:hint="@string/edit_address"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_model"
                android:layout_weight="3"
                android:hint="@string/edit_model"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_manufacturer"
                android:layout_weight="1"
                android:hint="@string/edit_manufacturer"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_company"
                android:hint="@string/edit_company"
                android:layout_weight="3"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/edit_date"
                android:text="00.00.0000"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sub"
                android:id="@+id/btn_add"
                android:layout_weight="1" android:textSize="16dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                android:id="@+id/btn_clear" android:layout_weight="1" android:textSize="16dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_close"
                android:id="@+id/btn_close"
                android:layout_weight="1" android:textSize="16dp"/>
    </LinearLayout>
</LinearLayout>