<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/info">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_serial"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:textSize="18dp" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inf_serial"
            android:textSize="18dp"
            android:textStyle="italic"
            android:text="text"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/inf_host"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_host"
            android:id="@+id/textView3" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inf_host"
            android:textStyle="italic"
            android:text="text" android:layout_above="@+id/inf_date" android:layout_alignLeft="@+id/inf_model"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_company"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:layout_below="@+id/textView9"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inf_comp"
            android:textStyle="italic"
            android:layout_marginLeft="36dp" android:text="text" android:layout_alignTop="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_install"
            android:id="@+id/textView8"
            android:textStyle="bold"
            android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inf_date"
            android:textStyle="italic"
            android:text="text" android:layout_alignTop="@+id/textView8" android:layout_alignLeft="@+id/inf_host"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_model"
            android:id="@+id/textView9"
            android:textStyle="bold" android:layout_below="@+id/textView8" android:layout_alignParentLeft="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inf_model"
            android:textStyle="italic"
            android:text="text" android:layout_below="@+id/inf_date" android:layout_alignLeft="@+id/inf_comp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_address"
            android:id="@+id/textView11"
            android:textStyle="bold"
            android:layout_below="@+id/textView5" android:layout_alignParentLeft="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inf_adress" android:layout_alignTop="@+id/textView11"
            android:layout_alignLeft="@+id/inf_comp" android:textStyle="italic" android:text="text"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"/>
</RelativeLayout>